--- a/index.html
+++ b/index.html
@@ -10,15 +10,31 @@
 </head>
 <body>
   <header class="header">
-    <img src="static/images/logo.svg" alt="logo" />
-    <nav class="menu"></nav>
-  </header>
-  <section class="hero">
     <div class="wrapper">
-      <div class="hero__image"></div>
-      <h1 class="title">Next generation digital banking</h1>
-      <p class="copy">Take your finalcial life online. Your Easybank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more.</p>
-      <button class="btn">Request Invite</button>
+      <div class="header__content">
+        <img class="header__logo" src="static/images/logo.svg" alt="logo" />
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+        <button class="btn">Request Invite</button>
+        <nav class="menu__button"></nav>
+      </div>
+    </div>
+  </header>
+  <section class="hero is-hidden">
+    <div class="wrapper">
+      <div class="hero__content">
+        <div class="hero__image"></div>
+        <div class="hero__decription">
+          <h1 class="title">Next generation digital banking</h1>
+          <p class="copy">Take your finalcial life online. Your Easybank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more.</p>
+          <button class="btn">Request Invite</button>
+        </div>
+      </div>
     </div>
   </section>
   <section class="why">
@@ -27,33 +43,35 @@
       <p class="copy">
         Take your finalcial life online. Your Easybank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more.
       </p>
-      <div class="why__item">
-        <img src="static/images/icon-online.svg" alt="image" />
-        <h1 class="title__h2">Online Banking</h1>
-        <p class="copy">
-          Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
-        </p>
-      </div>
-      <div class="why__item">
-        <img src="static/images/icon-budgeting.svg" alt="image" />
-        <h1 class="title__h2">Simple Budgeting</h1>
-        <p class="copy">
-          Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
-        </p>
-      </div>
-      <div class="why__item">
-        <img src="static/images/icon-onboarding.svg" alt="image" />
-        <h1 class="title__h2">Fast Onboarding</h1>
-        <p class="copy">
-          Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
-        </p>
-      </div>
-      <div class="why__item">
-        <img src="static/images/icon-api.svg" alt="image" />
-        <h1 class="title__h2">Open API</h1>
-        <p class="copy">
-          Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
-        </p>
+      <div class="why__grid">
+        <div class="why__item">
+          <img src="static/images/icon-online.svg" alt="image" />
+          <h1 class="title__h2">Online Banking</h1>
+          <p class="copy">
+            Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
+          </p>
+        </div>
+        <div class="why__item">
+          <img src="static/images/icon-budgeting.svg" alt="image" />
+          <h1 class="title__h2">Simple Budgeting</h1>
+          <p class="copy">
+            Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
+          </p>
+        </div>
+        <div class="why__item">
+          <img src="static/images/icon-onboarding.svg" alt="image" />
+          <h1 class="title__h2">Fast Onboarding</h1>
+          <p class="copy">
+            Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
+          </p>
+        </div>
+        <div class="why__item">
+          <img src="static/images/icon-api.svg" alt="image" />
+          <h1 class="title__h2">Open API</h1>
+          <p class="copy">
+            Our modern and Mobile applications allow you to keep track of your finances wherever you are in the world.
+          </p>
+        </div>
       </div>
     </div>
   </section>
@@ -116,7 +134,7 @@
   </section>
   <footer class="footer">
     <div class="wrapper">
-      <svg xmlns="http://www.w3.org/2000/svg" width="139" height="20">
+      <svg class="footer__logo" xmlns="http://www.w3.org/2000/svg" width="139" height="20">
         <defs>
           <linearGradient id="a" x1="72.195%" x2="17.503%" y1="0%" y2="100%">
             <stop offset="0%" stop-color="#33D35E"/>
@@ -139,14 +157,17 @@
         <a href="#" class="icon__pinterest"></a>
         <a href="#" class="icon__instagram"></a>
       </p>
-      <div class="more">
+      <div class="footer__links">
         <a href="#">About US</a>
         <a href="#">Contact</a>
+        <a href="#">Blog</a>
         <a href="#">Careers</a>
         <a href="#">Support</a>
         <a href="#">Privacy Policy</a>
       </div>
-      <button class="btn">Request Invite</button>
+      <div class="footer__button">
+        <button class="btn">Request Invite</button>
+      </div>
       <p class="footer__copyright">
         © Easybank. All Rights Reserved
       </p>
