--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <div class="wrapper">
       <div class="header__content">
         <img class="header__logo" src="static/images/logo.svg" alt="logo" />
+        <input type="checkbox" id="menu" class="menu__checkbox" />
         <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Careers</a></li>
+          <li class="menu__item"><a href="#">Home</a></li>
+          <li class="menu__item"><a href="#">About</a></li>
+          <li class="menu__item"><a href="#">Contact</a></li>
+          <li class="menu__item"><a href="#">Blog</a></li>
+          <li class="menu__item"><a href="#">Careers</a></li>
         </ul>
         <button class="btn">Request Invite</button>
-        <nav class="menu__button"></nav>
+        <label for="menu" class="menu__button"></label for="menu">
       </div>
     </div>
   </header>
