--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
       </div>
     </div>
   </header>
-  <section class="hero is-hidden">
+  <section class="hero">
     <div class="wrapper">
       <div class="hero__content">
-        <div class="hero__image"></div>
+        <div class="hero__image">
+          <img class="hero__img" src="./static/images/image-mockups.png" alt="iphone" />
+        </div>
         <div class="hero__decription">
           <h1 class="title">Next generation digital banking</h1>
           <p class="copy">Take your finalcial life online. Your Easybank account will be a one-stop-shop for spending. saving, budgeting, investing, and much more.</p>
